syntax = "proto3";

package gateway_config;

service GatewayConfigService {
  rpc GetEndpoints(GetEndpointsRequest) returns (EndpointsResponse);
  rpc GetEndpointByPath(GetEndpointByPathRequest) returns (EndpointResponse);
  rpc GetEndpointByResource(GetEndpointByResourceRequest) returns (EndpointResponse);
  rpc CreateEndpoint(CreateEndpointRequest) returns (EndpointResponse);
  rpc UpdateEndpoint(UpdateEndpointRequest) returns (EndpointResponse);
  rpc DeleteEndpoint(DeleteEndpointRequest) returns (DeleteResponse);
  rpc SyncToKong(SyncToKongRequest) returns (SyncResponse);
  rpc SyncAllToKong(SyncAllRequest) returns (SyncResponse);

  // App Navigation & Features
  rpc GetNavigationTree(GetNavigationTreeRequest) returns (NavigationTreeResponse);
  rpc GetAppFeatures(GetAppFeaturesRequest) returns (AppFeaturesResponse);
  rpc CreateAppFeature(CreateAppFeatureRequest) returns (AppFeatureResponse);
  rpc UpdateAppFeature(UpdateAppFeatureRequest) returns (AppFeatureResponse);
  rpc DeleteAppFeature(DeleteAppFeatureRequest) returns (DeleteResponse);
}

message GetEndpointsRequest {
  optional string module = 1;
  optional bool is_active = 2;
}

message GetEndpointByPathRequest {
  string path = 1;
  string method = 2;
}

message GetEndpointByResourceRequest {
  string resource_name = 1;
  string action = 2;
  string method = 3;
}

message CreateEndpointRequest {
  string path = 1;
  string method = 2;
  optional string description = 3;
  optional string module = 4;
  bool is_public = 5;
  repeated string role_codes = 6;
  optional int32 rate_limit_requests = 7;
  optional string rate_limit_window = 8;
  optional string resource_name = 9;
  optional string action = 10;
  optional string created_by = 11;
}

message UpdateEndpointRequest {
  string id = 1;
  optional string description = 2;
  optional string module = 3;
  optional bool is_public = 4;
  repeated string role_codes = 5;
  optional int32 rate_limit_requests = 6;
  optional string rate_limit_window = 7;
  optional string resource_name = 8;
  optional string action = 9;
  optional string updated_by = 10;
}

message DeleteEndpointRequest {
  string id = 1;
}

message SyncToKongRequest {
  string endpoint_id = 1;
}

message SyncAllRequest {}

message EndpointResponse {
  string id = 1;
  string path = 2;
  string method = 3;
  string description = 4;
  string module = 5;
  bool is_public = 6;
  repeated string role_codes = 7;
  optional int32 rate_limit_requests = 8;
  optional string rate_limit_window = 9;
  optional string resource_name = 10;
  optional string action = 11;
  optional string kong_route_id = 12;
  optional string kong_route_name = 13;
}

message EndpointsResponse {
  repeated EndpointResponse endpoints = 1;
}

message DeleteResponse {
  bool success = 1;
  string message = 2;
}

message SyncResponse {
  bool success = 1;
  int32 synced_count = 2;
  int32 failed_count = 3;
  string message = 4;
}

// App Navigation & Features Messages
message GetNavigationTreeRequest {
  repeated string role_codes = 1;
}

message GetAppFeaturesRequest {
  optional string parent_id = 1;
  optional bool is_active = 2;
}

message CreateAppFeatureRequest {
  string code = 1;
  string name = 2;
  optional string icon = 3;
  optional string route = 4;
  optional string parent_id = 5;
  int32 order_index = 6;
  repeated string role_codes = 7;
}

message UpdateAppFeatureRequest {
  string id = 1;
  optional string name = 2;
  optional string icon = 3;
  optional string route = 4;
  optional string parent_id = 5;
  optional int32 order_index = 6;
  optional bool is_active = 7;
  repeated string role_codes = 8;
}

message DeleteAppFeatureRequest {
  string id = 1;
}

message AppFeatureResponse {
  string id = 1;
  string code = 2;
  string name = 3;
  string icon = 4;
  string route = 5;
  string parent_id = 6;
  int32 order_index = 7;
  bool is_active = 8;
  repeated string role_codes = 9;
  repeated AppFeatureResponse children = 10;
}

message AppFeaturesResponse {
  repeated AppFeatureResponse features = 1;
}

message NavigationTreeResponse {
  repeated AppFeatureResponse menu = 1;
}
